...
      isOpen: true,
      rating: '4.8',
    },
    {
      id: 2,
      name: 'Lango Health Clinic',
      services: 'Teleconsultation, HIV Care',
      open: '24/7',
      distance: '3.5 km',
      isOpen: true,
      rating: '4.5',
    },
    {
...
